[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/HUD/themes/wc3_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/HUD/texture.jpg" type="Texture2D" id=5]
[ext_resource path="res://Scenes/HUD/RightMenuBar.gd" type="Script" id=6]
[ext_resource path="res://Scenes/HUD/BuildBar.gd" type="Script" id=7]

[node name="RightMenuBar" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 6 )

[node name="ColorRect" type="TextureRect" parent="."]
self_modulate = Color( 0.192157, 0.192157, 0.207843, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
offset_right = 400.0
offset_bottom = 1000.0
custom_minimum_size = Vector2( 400, 1000 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
offset_right = 40.0
offset_bottom = 40.0
custom_constants/offset_right = 20
custom_constants/offset_top = 20
custom_constants/offset_left = 20
custom_constants/offset_bottom = 20

[node name="ItemBar" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
visible = false
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0
columns = 4

[node name="BuildBar" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0
columns = 4
script = ExtResource( 7 )

[connection signal="element_changed" from="." to="VBoxContainer/ScrollContainer/MarginContainer/BuildBar" method="_on_RightMenuBar_element_changed"]
[connection signal="child_entered_tree" from="VBoxContainer/ScrollContainer/MarginContainer/ItemBar" to="." method="_on_BuildBar_child_entered_tree"]
[connection signal="child_entered_tree" from="VBoxContainer/ScrollContainer/MarginContainer/BuildBar" to="." method="_on_BuildBar_child_entered_tree"]
[connection signal="child_exiting_tree" from="VBoxContainer/ScrollContainer/MarginContainer/BuildBar" to="." method="_on_BuildBar_child_exiting_tree"]
